[package]
name = "eywa-authentication"
version = "0.1.0"
edition = "2024"
description = "EYWA Authentication Module - JWT, Password Hashing, TOTP for HomeManager"
authors = ["HomeManager Team"]
license = "MIT"
repository = "https://github.com/homemanager/eywa-authentication"

[lib]
name = "eywa_authentication"
path = "src/lib.rs"

[dependencies]
# JWT
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# Time handling
time = { version = "0.3", features = ["serde", "macros"] }

# Password hashing (Argon2id - most secure)
argon2 = "0.5"
rand = "0.9.2"

# TOTP / 2FA (Google Authenticator)
totp-rs = { version = "5.7.0", features = ["gen_secret", "qr"] }
qrcode = { version = "0.14", optional = true }
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.17", features = ["v4", "v7", "serde"] }

# Error handling (from eywa-errors workspace)
eywa-errors = { workspace = true }
thiserror = "1.0"

# Validation
regex = "1.10"
url = "2.5"
lazy_static = "1.4"

# Async support
tokio = { version = "1.48", features = ["sync"] }

# Logging
tracing = "0.1"

# HTTP types
axum = "0.8.8"
http = "1.1"
async-trait = "0.1"

# Encoding
base64 = "0.22"

[features]
default = ["qr"]
qr = ["dep:qrcode"]
rate-limit = []
advanced-security = []
